lab1/Test/L1-A-6-75.output
Error Type B at Line 7
Error Type B at Line 13
Error Type B at Line 15
Error Type B at Line 16
Error Type A at Line 18
Error Type B at Line 22
