lab1/Test/L1-A-6-75.cmm
int _ , u3gNoB 

;
struct {
}r_wvveOMd48s54cfuDXl [ 2109100608 ] [ 2118106651 
  ] [ 680052239 ] [ 611346384 ] , H9qzod5XkC [ 1051125991 
  ] [ 228180644 ] [ ] [ 1810832371 ] , b9jrXJJhGQLCx_hg 
  , MBz2RCdQWbOKIJ 



;
struct rc_Ctv7h int c5 ( ) {
  struct nksfl9ua {
  }EBnv5dtGI0jaM = w6khydUr1bEJ7 , NKQDYP float ;
  float bC2O30upU6nk1WJI while ;
}
float ESv5NaD7IzRWrAiTMf '( struct ozBl7sP8yAU1hbsk3 
  aDd4mYZ396QKvK8 ) {
  int j5dlJCL2Eb ;
}
int >= ;
